# rust_bin

./: Cargo.toml  shell.nix
assets/minesweeper/: minesweeper.aseprite
minesweeper/: Cargo.toml
minesweeper/src/: board.rs  events.rs  helpers.rs  lib.rs  options.rs  texture_handles.rs
minesweeper/src/components/: board_marker.rs  coordinates.rs  mod.rs  tile_cover_marker.rs  tile_marker.rs  uncover_marker.rs
minesweeper/src/resources/: board.rs  bounds.rs  mod.rs  plugin_options.rs  tile.rs  tile_map.rs
minesweeper/src/states/: mod.rs  plugin_state.rs
minesweeper/src/systems/: game_finished_event_loop.rs  input.rs  mod.rs  remove_cover.rs  rescale.rs  tile_flag_event_handler.rs  tile_uncover_event_handler.rs
src/: app_state.rs  asset_handles.rs  error.rs  events.rs  main.rs  prelude.rs
