[package]
name = "minesweeper"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy.workspace = true
thiserror.workspace = true
rand = "0.8.5"
bevy-inspector-egui = { version = "0.24.0", "optional" = true }

[lints]
workspace = true

[features]
default = []
debug = [ "bevy-inspector-egui" ]
